[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Modes/Encounter/Dialogue/UI/AnswerBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Modes/Encounter/Dialogue/UI/DialogueBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Modes/Encounter/Dialogue/UI/Fullscreen/Fullscreen.gd" type="Script" id=3]
[ext_resource path="res://src/Modes/Encounter/Dialogue/UI/Fullscreen/HideBoxesContainer.gd" type="Script" id=4]


[node name="Fullscreen" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -447.0
margin_top = 34.0
margin_right = 448.0
margin_bottom = 276.0

[node name="DialogueBackground" parent="DialogueBox" index="0"]
margin_right = 895.0
margin_bottom = 242.0

[node name="DialogueContainer" parent="DialogueBox" index="1"]
margin_right = 895.0
margin_bottom = 242.0

[node name="TextBox" parent="DialogueBox/DialogueContainer" index="0"]
margin_right = 895.0
margin_bottom = 242.0

[node name="Text" parent="DialogueBox/DialogueContainer/TextBox" index="0"]
margin_right = 895.0
margin_bottom = 242.0

[node name="PortraitBackground" parent="DialogueBox/DialogueContainer" index="1"]
visible = false
margin_left = 598.0
margin_right = 895.0
margin_bottom = 242.0

[node name="Choices" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -601.0
margin_top = 400.0
margin_right = 602.0
margin_bottom = 692.0

[node name="HideBoxesContainer" type="HBoxContainer" parent="."]
margin_left = 1189.0
margin_top = 698.0
margin_right = 1278.0
margin_bottom = 718.0
alignment = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HideBoxesContainer"]
margin_right = 73.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Hide Boxes"
align = 1
valign = 1

[node name="Button" type="Button" parent="HideBoxesContainer"]
margin_left = 77.0
margin_right = 89.0
margin_bottom = 20.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="DialogueBox"]
